# VI

./: MANIFEST.in  README.md  pyproject.toml  quick_test.py
lilvect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: migrate_to_memmap.py  rebuild_metadata.py
tests/: test_basic.py  test_batch.py  test_compact.py
vectorlite/: __init__.py
vectorlite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vectorlite/vectorlite/: __init__.py  cli.py  client.py  index_exact.py  lock.py  maintenance.py  metrics.py  server.py  storage.py  storage_memmap.py
vectorlite/vl_db/: metadata.db
vl_db/: metadata.db  metadata.db.bak
vl_db/vectors/: b.npy
vl_db_backup_1762934448/vectors/: c.npy
