[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lilvect"
version = "0.1.0"
description = "LilVect — small, local vector DB (memmap + sqlite) with journaling and an optional HTTP API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Safvan", email = "your-email@example.com" }
]
keywords = ["vector", "vector-search", "memmap", "sqlite", "nlp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "numpy>=1.24",
  "pydantic>=1.10",
  "fastapi>=0.95; extra == 'server'",
  "uvicorn>=0.22; extra == 'server'"
]

[project.optional-dependencies]
server = ["fastapi>=0.95", "uvicorn>=0.22"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*"]
